fixed bug related to whitespace in inputfield
+ google analytics tracking

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,6 @@
 body {
     background-image: url('../img/bgd.jpg');
+    color: #333;
 }
 
 a {
@@ -65,6 +66,22 @@ h1 {
     color: #29ABE2;
 }
 
+.inputbox{
+  background-image:url('img/bgd2.jpg');
+  background-repeat:no-repeat;
+  background: none;
+  padding-left:10px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  align: left;
+  font: 18px 'Aller Light';
+  color: #333;
+} 
+
+.inputbox:hover {
+    color: #29ABE2;
+}
 
 /* @font-face kit by Fonts2u (http://www.fonts2u.com) */ 
 @font-face {
